Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-25513

Qt network cannot process raw deflate compressed data in a HTTP response

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P4: Low
    • 5.0.0
    • 5.0.0 Beta 1
    • Network
    • None
    • Linux Ubuntu 11.04
    • 4189d07c837e66f4cda92820477f5fb0e3d9315c

    Description

      Even after https://bugreports.qt-project.org/browse/QTBUG-13191 is fixed
      'deflate' encoding type doesn't work at least for some pages:
      http://carsten.codimi.de/gzip.yaws/daniels.html?deflate=on
      http://www.youku.com

      Here is output from qget:
      qget http://carsten.codimi.de/gzip.yaws/daniels.html?deflate=on
      finished QUrl( "http://carsten.codimi.de/gzip.yaws/daniels.html?deflate=on" ) with http status: 200
      and error: 399 "Data corrupted"
      All Done.

      under the hood inflate(&inflateStrm, Z_NO_FLUSH) is called from QHttpNetworkReplyPrivate::uncompressBodyData() and it returns Z_DATA_ERROR.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            xcm Martin Petersson (Inactive)
            michael.tyutyunik@nokia.com Misha Tyutyunik
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes